# windows-snapshot

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  state.rs
src/hardware/: cooling_device.rs  input_device.rs  mass_storage.rs  mod.rs  motherboard_controller_port.rs  networking_device.rs  power.rs  printing.rs  telephony.rs  video_monitor.rs
src/operating_system/: desktop.rs  drivers.rs  event_log.rs  file_system.rs  job_objects.rs  memory_and_page_files.rs  memory_and_pagefiles.rs  mod.rs  multimedia_audio_visual.rs  networking.rs  operating_system_settings.rs  processes.rs  product_activation.rs  registry.rs  scheduler_jobs.rs  security.rs  services.rs  shares.rs  software_license_provider.rs  start_menu.rs  storage.rs  users.rs  windows_product_activation.rs
